# searchString

./: .gitignore  .gitmodules  CMakeLists.txt  cmake.toml
.github/workflows/: release.yml
cmake/: dlib.cmake  googletest.cmake  searchString.cmake
include/: file_bytes.h  gb2312_filter.h  gb2312_validator.h  istream_iterator.h  optional.hpp  pe_header.h  search_gb2312_string.hpp  search_string.h  search_string.hpp  search_string_ascii.hpp  search_string_gb2312.hpp  simple_archive.hpp  simple_array.hpp  simple_bitset.hpp  string_filter.h  string_validator.h  utils.h  utils.hpp  word_counter_2gram.hpp
include/lua/: loader.h  lua_wrapper.h  strfd.h
include/process/: mem_indexable.h  memory_map.h  memory_map_collection.h  memory_map_iter.h  memory_map_module.h  memory_map_pefile.h  memory_map_section.h  memory_map_win_page.h  memory_value_ref.h  win_process_native.h  win_process_pefile.h
include/sfilter/: exclusive.h  exclusive_full.h  filter_factory.h  gb2312_frequency.h  gb2312_ngram_svm.hpp  gb2312_svm.h  generic_ngram_svm.hpp  inclusive.h  lua_filter.h  min_length.h  ngram_svm_filter.hpp  regex.h  string_filter.h  string_filter_gb2312_frequency.h  string_filter_min_length.h  string_filter_svm_gb2312.h
include/sfinder/: finder_factory.h  getter_factory.hpp  lua_finder.h  string_finder.h  string_finder_ascii.h  string_finder_gb2312.h  string_finder_utf16.h  string_finder_utf8.h  string_getter.hpp  unicode_converter.h
include/sgetter/: getter_factory.hpp  string_getter_base.h  string_getter_by_finder.hpp  string_getter_by_reducer.h  string_getter_iter.h
include/simple_archive/: array.hpp  integral.hpp  map.hpp  tuple.hpp
include/smap/: base64.h  gb2312_longest_valid_substr.h  gb2312_to_utf8.h  hexadecimal.h  lua_mapper.h  mapper_factory.h  string_mapper.h  string_split_line.h  string_truncate.h  substitute.h  trim.h  utf16_to_utf8.h  utf8_to_gb2312.h  utf8_to_utf16.h
include/sreduce/: identical.h  last_n.h  least_repeated_n.h  lua_reducer.h  merge.h  most_repeated_n.h  reducer_factory.h  reverse.h  sort_by_length.h  string_reducer.h  top_n.h  unique.h
include/svm/: sentence_svm_2gram.hpp  sentence_svm_ngram.hpp  supported_trainer_kernel.h  trainer.hpp  trainer_gb2312.hpp  trainer_generic.hpp  word_counter_ngram.hpp
include/win_process/: mem_indexable.h  memory_value_ref.h  process_map.h  process_map_iter.h  process_map_native.h  process_map_pefile.h  win_process.h  win_process_native.h  win_process_pefile.h
lib/: base64.cpp  file_bytes.cpp  gb2312_filter.cpp  gb2312_validator.cpp  istream_iterator.cpp  pe_header.cpp  simple_archive.cpp  string_filter.cpp  string_mapper.cpp  string_validator.cpp  utils.cpp
lib/lua/: loader.cpp  lua_wrapper.cpp  strfd.cpp
lib/process/: mem_indexable.cpp  memory_map.cpp  memory_map_collection.cpp  memory_map_iter.cpp  memory_map_module.cpp  memory_map_pefile.cpp  memory_map_section.cpp  memory_map_win_page.cpp  memory_value_ref.cpp  win_process_native.cpp  win_process_pefile.cpp
lib/sfilter/: exclusive.cpp  exclusive_full.cpp  filter_factory.cpp  gb2312_frequency.cpp  gb2312_ngram_svm.cpp  gb2312_svm.cpp  gb2312_table.cpp  generic_ngram_svm.cpp  inclusive.cpp  lua_filter.cpp  min_length.cpp  regex.cpp  string_filter.cpp  string_filter_gb2312_frequency.cpp  string_filter_min_length.cpp
lib/sfinder/: finder_factory.cpp  gb2312_table.cpp  gb2312_unicode_converter.cpp  lua_finder.cpp  string_finder.cpp  string_finder_ascii.cpp  string_finder_gb2312.cpp  string_finder_utf16.cpp  string_finder_utf8.cpp  string_getter.cpp  unicode.cpp  utf16_unicode_dencoder.cpp  utf8_unicode_dencoder.cpp
lib/sgetter/: getter_factory.cpp  string_getter_base.cpp  string_getter_by_reducer.cpp  string_getter_iter.cpp
lib/simple_archive/: tuple.cpp
lib/smap/: base64.cpp  gb2312_longest_valid_substr.cpp  gb2312_to_utf8.cpp  hexadecimal.cpp  lua_mapper.cpp  mapper_factory.cpp  string_mapper.cpp  string_split_line.cpp  string_truncate.cpp  substitue.cpp  trim.cpp  utf16_to_utf8.cpp  utf8_to_gb2312.cpp  utf8_to_utf16.cpp
lib/sreduce/: identical.cpp  last_n.cpp  least_repeated_n.cpp  lua_reducer.cpp  merge.cpp  most_repeated_n.cpp  reducer_factory.cpp  reverse.cpp  sort_by_length.cpp  top_n.cpp  unique.cpp
lib/svm/: trainer_gb2312.cpp  trainer_generic.cpp
lib/win_process/: memory_value_ref.cpp  process_map.cpp  process_map_iter.cpp  process_map_native.cpp  process_map_pefile.cpp  win_process.cpp  win_process_native.cpp  win_process_pefile.cpp
src/: main.cpp  main.h  pefile.cpp  print_transforms.cpp  search_process.cpp  trainsvm.cpp  utils.cpp  utils.h  win32_utils.cpp  win32_utils.h
test/: gb2312_filter.cpp  search_string_ascii.cpp  search_string_gb2312.cpp  sentence_svm_2gram.cpp  sentence_svm_ngram.cpp  simple_archive.cpp  simple_archive_tuple.cpp  traindata.h  word_counter_2gram.cpp  word_counter_ngram.cpp
